# snapshot-tester

./: .gitignore  README.md  README_snapshot_tool.md  customtest.sh  pyproject.toml  snapshot_test.py  test_benchmarks.py  test_class_capture.py  test_class_instance.py  test_debug_fixes.py  test_minimal_debug.py  test_snapshot_tool.py
.github/workflows/: lint.yml  test-astropy.yml  test-pandas.yml  test-shapely.yml  tests.yml
diff_tester/snapshot/: __init__.py  cli.py  comparator.py  config.py  discovery.py  runner.py  storage.py  tracer.py
src/snapshot_tool/: __init__.py  cli.py  comparator.py  config.py  discovery.py  rng_patcher.py  runner.py  storage.py  tracer.py
tests/: conftest.py  test_benchmarks.py  test_class_capture.py  test_class_instance.py  test_cli_roundtrip.py  test_comparator_comprehensive.py  test_debug_fixes.py  test_discovery_comprehensive.py  test_integration.py  test_minimal_debug.py  test_rng_patcher.py  test_runner_comprehensive.py  test_snapshot_tool.py  test_storage_comprehensive.py  test_tracer_comprehensive.py
tests/test_repos/pandas_benchmarks/: __test_object__.csv
tests/test_repos/shapely_benchmarks/: benchmarks.py
