[project]
name = "snapshot-tool"
version = "0.1.0"
description = "Snapshot testing tool for ASV benchmarks - captures and compares function outputs to verify correctness after optimizations"
readme = "README.md"
authors = [
    { name = "James Hou", email = "jahou@caltech.edu" },
    { name = "Atharva Sehgal", email = "atharva.sehgal@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["testing", "benchmarking", "snapshot", "asv", "regression-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/formulacode/snapshot-tester"
Repository = "https://github.com/formulacode/snapshot-tester"
Issues = "https://github.com/formulacode/snapshot-tester/issues"

[project.scripts]
snapshot-tool = "snapshot_tool.cli:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
