[project]
name = "snapshot-tool"
version = "0.1.0"
description = "Snapshot testing tool for ASV benchmarks - captures and compares function outputs to verify correctness after optimizations"
readme = "README.md"
authors = [
    { name = "James Hou", email = "jahou@caltech.edu" },
    { name = "Atharva Sehgal", email = "atharva.sehgal@gmail.com" }
]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["testing", "benchmarking", "snapshot", "asv", "regression-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/formulacode/snapshot-tester"
Repository = "https://github.com/formulacode/snapshot-tester"
Issues = "https://github.com/formulacode/snapshot-tester/issues"

[project.scripts]
snapshot-tool = "snapshot_tool.cli:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "numpy>=1.15.0",  # For testing with numpy arrays (compatible with 2017+ versions)
    "shapely>=2.0.0",
    "astropy>=5.0.0",
    "scipy>=1.9.0",
    "pandas>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "UP007", # Use X | Y for union types (not compatible with Python 3.8-3.9)
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
norecursedirs = ["tests/test_repos/*"]
markers = [
    "slow: marks tests as slow (e.g., full benchmark repository roundtrips)"
]
